# job-ads-classifier

./: .gitignore  BENCHMARK-0.3.0.md  CHANGELOG.md  CITATION.cff  Dockerfile  LICENSE  README-0.1.0.md  README-0.2.0.md  README-0.3.0.md  README.md  main.py  pyproject.toml  pytest.ini  requirements-0.1.0.txt  requirements-0.2.0.txt  requirements-colab-0.1.0.txt  requirements-colab-0.3.0.txt  requirements-colab.txt  requirements.txt
colab/: README.md  colab-existing-model-gpu-predict-0.2.0.ipynb  colab-repod-pretrained-models-0.2.0.ipynb  colab-short-transformer-training-gpu-0.2.0.ipynb  colab-smoke-test-0.2.0.ipynb
example/: y_test.txt
example_data/: classes.tsv  x_test.txt  y_train.txt
job_offers_classifier/: classification_utils.py  cli.py  collators.py  data_modules.py  datasets.py  evaluation.py  job_offers_classfier.py  job_offers_utils.py  load_save.py  runtime.py  trainer.py  transformer_module.py
scripts/: benchmark_0_3_0.py  compare_server_0_2_0_vs_0_3_0.sh  run_colab_transformer_benchmark_0_3_0.sh  validate_existing_model_cpu.sh
tests/: conftest.py  test_base_classifier.py  test_cli.py  test_datasets.py  test_existing_model_cpu.py  test_job_offers_utils.py  test_linear_compat.py  test_linear_model_loading.py  test_runtime.py  test_smoke_linear.py  test_smoke_transformer.py  test_transformer_data_pipeline.py  test_transformer_module.py
tests/data/: classes.tsv  x_test.txt  x_train.txt  y_train.txt
